rendered word meanings

--- a/src/SearchEngine.css
+++ b/src/SearchEngine.css
@@ -2,9 +2,14 @@
   border: 2px solid orange;
   margin: 30px 50px;
 
-  background-color: #d8de96;
+  background-color: #e1e8a0;
 }
 .text-wrapp {
   text-align: center;
   margin-top: 15px;
+}
+
+.results {
+  border: 2px solid green;
+  margin: 0 50px;
 }
