--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  background-image: url(bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url(BookLover.svg);
+  font-family: "Playfair Display", serif;
 }
